fixed header spacing css

--- a/sb/sass/_screen.scss
+++ b/sb/sass/_screen.scss
@@ -25,6 +25,10 @@ a {
 /* HEADER
 /* ======================== */
 
+h1 + h2 {
+  margin-top: -.75em;
+}
+
 h1 + h3 {
   margin-top: -.75em;
 }
